--- a/WebApplication3/Views/Home/Deneme.cshtml
+++ b/WebApplication3/Views/Home/Deneme.cshtml
@@ -14,8 +14,11 @@ No: @Model.OgrNo <br />
 @{
     string m1 = ViewBag.mesaj1;
     string m2 = Convert.ToString(ViewData["mesaj2"]);
-    string m3 = TempData["mesaj3"].ToString(); 
-    //2 toString de ayni
+    string m3 = TempData["mesaj3"].ToString();
+    //string m3 = (string)TempData["mesaj3"];
+    //3 toString de ayni
+    Ogrenci o1 = ViewBag.mesaj5;
+    Ogrenci o2 = (Ogrenci)ViewData["mesaj4"];
 
 }
 
@@ -23,3 +26,5 @@ No: @Model.OgrNo <br />
 Viewbag: @m1 <br />
 Viewdata: @m2 <br />
 Tempdata: @m3 <br />
+Viewbag Ogrenci: @o1.OgrNo @o1.OgrAd @o1.OgrSoyad <br />
+ViewData Ogrenci: @o2.OgrNo @o2.OgrAd @o2.OgrSoyad <br />
